--- a/Createx/css/style.css
+++ b/Createx/css/style.css
@@ -1,14 +1,42 @@
+/* ============================= GlOBAL =============== */
+/* ============================= GlOBAL =============== */
+
 html, body {
-  font-size: 16px;
+  /* font-size: 16px; */
   font-family: Lato, sans-serif;
   color: #424551;
-  font-weight: 700;
+  /* font-weight: 700; */
+  line-height: 160%;
 }
 
 .wrapper {
   min-height: 100%;
   width: 100%;
   overflow: hidden;
+}
+
+.main__about {
+  padding: 180px 0 160px;
+}
+
+.main__directions {
+  padding-bottom: 180px;
+}
+
+.main__cert {
+  margin-bottom: -46px;
+}
+
+.main__team {
+  padding: 160px 0px 180px;
+}
+
+.main__testimonials {
+  padding-bottom: 195px;
+}
+
+.main__companies {
+  padding-bottom: 177px;
 }
 
 .container {
@@ -55,12 +83,35 @@ html, body {
 
 .logo {}
 
-/* ------------------------------------------- */
+.heading {
+  color: #1e212c;
+}
+
+.haeding__subtitle {
+  line-height: 150%;
+  margin-bottom: 8px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.heading__title {
+  font-weight: 900;
+  font-size: 46px;
+  line-height: 130%;
+}
+
+.heading--text-center {
+  text-align: center;
+}
+
+/* ========================================= HEADER NAV =============================== */
+/* ========================================= HEADER NAV =============================== */
 
 .header {
   font-weight: 700px;
   background: url("../images/decor/shapes-bg.svg") 50% 50% / cover no-repeat, linear-gradient(55.95deg, rgba(255, 63, 58, .2) 0%, rgba(247, 94, 5, .2) 100%);
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -75,7 +126,7 @@ html, body {
 }
 
 .header__logo {
-  margin-right: 60px;
+  margin: 0 60px;
 }
 
 .haeder__nav {
@@ -143,7 +194,8 @@ html, body {
   color: #FF3F3A;
 }
 
-/* ---------------------------------------------------------------------------*/
+/* ============================================ HEADER BODY ============================ */
+/* ============================================ HEADER BODY ============================ */
 
 .header__body {
   flex-grow: 1;
@@ -156,14 +208,17 @@ html, body {
 }
 
 .header__main {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template: 1fr / 1fr 1fr;
+  justify-content: center;
   align-items: center;
   color: #1e212c;
   margin: auto 0;
 }
 
-.headre__content {
+.header__img {}
+
+.header__content {
   margin-right: 30px;
 }
 
@@ -175,8 +230,8 @@ html, body {
 
 .header__play svg {
   margin-right: 16px;
-  transition: all .3s;
   border-radius: 50%;
+  transition: all .3s;
 }
 
 .header__play:hover svg {
@@ -204,9 +259,11 @@ html, body {
   margin-right: 0px;
 }
 
+
 .header__row {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template: 1fr / repeat(8, 1fr);
+  justify-items: center;
   align-items: center;
   color: #1e212c;
   margin-bottom: 80px;
@@ -230,4 +287,723 @@ html, body {
   font-size: 46px;
   line-height: 130%;
   margin-right: 12px;
+}
+
+/* ========================================= ABOUT =============================== */
+/* ========================================= ABOUT =============================== */
+
+.about__inner {}
+
+.about__createx {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  margin-bottom: 180px;
+  position: relative;
+}
+
+.about__createx::before {
+  content: "";
+  position: absolute;
+  top: -80px;
+  right: -140px;
+  background: url("../images/decor/1.svg");
+  width: 100px;
+  height: 85px;
+}
+
+.about__createx-content {
+  max-width: 600px;
+  margin-right: 30px;
+}
+
+.about__heading {
+  margin-bottom: 48px;
+}
+
+.about__text {
+  margin-bottom: 60px;
+}
+
+.about__paragraph {
+  margin-bottom: 24px;
+}
+
+.about__paragraph:last-child {
+  margin-bottom: 0;
+}
+
+.about__paragraph--accent {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 150%;
+  color: #1e212c;
+}
+
+.about__btn-box {
+  display: flex;
+}
+
+.about__btn {
+  margin-right: 24px;
+}
+
+.about__btn:last-child {
+  margin-right: 0;
+}
+
+.about__img {}
+
+.about__values {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+}
+
+.about__image-box {
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.about__image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about__numbers {
+  margin-left: 30px;
+  align-self: center;
+}
+
+.about__number {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.about__number:last-child {
+  margin-bottom: 0;
+}
+
+.about__number span {
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 130%;
+  letter-spacing: 1px;
+  color: #ff3f3a;
+  margin-right: 16px;
+}
+
+/* ========================================== DIRECTIONS ============================== */
+/* ========================================== DIRECTIONS ============================== */
+
+.directions__inner {
+  position: relative;
+}
+
+.directions__inner::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 30px;
+  left: -190px;
+  width: 136px;
+  height: 115px;
+  background: url("../images/decor/2.svg") 0 0 no-repeat;
+}
+
+.directions__inner::after {
+  content: "";
+  position: absolute;
+  top: 400px;
+  left: -400px;
+  width: 243px;
+  height: 243px;
+  background: url("../imgaes/decor/3.svg") 0 0 no-repeat;
+  opacity: .12
+}
+
+.directions__heading {
+  margin-bottom: 90px;
+}
+
+.directions__body {}
+
+.directions__filter-box {
+  display: flex;
+  margin-bottom: 56px;
+}
+
+.directions__filter-item {
+  margin-right: 45px;
+}
+
+.directions__filter-item:last-child {
+  margin-right: 0;
+}
+
+.directions__filter-btn {
+  display: block;
+  background-color: transparent;
+  color: #9a9ca5;
+  border: 1px solid #9a9ca5;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1;
+  padding: 5px 7px;
+}
+
+.directions__filter-btn--active {
+  background: linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
+  border: none;
+  color: #fff;
+  padding: 6px 7px;
+}
+
+.directions__list {
+  display: grid;
+  grid-template: repeat(2, auto) / repeat(3, 1fr);
+  gap: 30px;
+}
+
+.directions__list-item--empty {
+  background: #f4f5f7;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 150%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.directions__list-item--empty span {
+  max-width: 240px;
+}
+
+.directions__list-item {
+  border-radius: 4px;
+}
+
+.directions__list-item--marketing .directions__link-tag {
+  background-color: #03cea4
+}
+.directions__list-item--management .directions__link-tag {
+  background-color: #5a87fc
+}
+.directions__list-item--hr .directions__link-tag {
+  background-color: #f89828
+}
+.directions__list-item--design .directions__link-tag {
+  background-color: #f52f6e
+}
+.directions__list-item--development .directions__link-tag {
+  background-color: #7772f1
+}
+
+.directions__list-link {
+  display: block;
+  border-radius: 4px;
+  overflow: hidden;
+  transition: all 1s;
+}
+
+.directions__list-link:hover {
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+  transition: all .3s;
+}
+
+.directions__list-link:hover .directions__link-btn {
+  color: #FF3F3A;
+  transition: all .3s;
+}
+
+.directions__image-box img {
+  height: 100%;
+  width: 100%;
+}
+
+.dirctions__link-content {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #e5e8ed;
+  border-top: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.directions__link-tag {
+  line-height: 1;
+  font-weight: 700;
+  color: #fff;
+  background-color: #999;
+  padding: 6px 8px;
+  border-radius: 4px;
+  align-self: flex-start;
+  margin-bottom: 20px;
+}
+
+.directions__link-text {
+  color: #787a80;
+  margin-bottom: 20px;
+}
+
+.directions__link-btn {
+  color: #1e212c;
+  display: flex;
+  font-weight: 700;
+  transition: all .3s;
+}
+
+.directions__link-btn::after {
+  content: "";
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: url("../images/icons/arrow-right-red.svg") 0 2px / 100% no-repeat;
+  margin-left: 11px;
+}
+
+/* ====================================== CERTIFICATE ================================== */
+/* ====================================== CERTIFICATE ================================== */
+
+.cert {
+
+}
+
+.cert__inner {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.cert__inner::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -15px;
+  left: -190px;
+  width: 60px;
+  height: 60px;
+  background: url("../images/decor/4.svg") 0 0 no-repeat;
+}
+
+.cert__content {
+  margin-right: 30px;
+  min-width: 40px;
+}
+
+.cert__heading {
+  margin-bottom: 50px;
+}
+
+.cert__text {
+  margin-bottom: 30px;
+}
+
+.cert__logos {
+  display: flex;
+}
+
+.cert__logos-item {
+  margin-right: 40px;
+}
+
+.cert__logos-item:last-child {
+  margin-right: 0px;
+}
+
+.cert__image-box {
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.16), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
+}
+
+
+/* =============================== TEAM =========================== */
+/* =============================== TEAM =========================== */
+
+.team {
+  background: url("../images/decor/team-bg.svg") calc(50% + 140px) calc(50% - 120px) no-repeat, #f4f5f7;
+}
+
+.team__inner {
+}
+.team__heading {
+  margin-bottom: 60px;
+  position: relative;
+}
+
+.team__slider .slick-list {
+  margin: 0 -15px;
+}
+
+.team__slide {
+  padding: 0 15px;
+}
+
+.team__slide:hover .team__socials {
+  transform: translateY(0%);
+}
+
+.team__image-box {
+  border-radius: 4px;
+  margin-bottom: 16px;
+  overflow: hidden;
+  position: relative;
+}
+.team__image {
+  position: relative;
+  height: 340px;
+}
+
+.team__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.team__socials {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: absolute;
+  top: 50%; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  background: linear-gradient(180deg, rgba(30, 33, 44, 0) 43.9%, rgba(30, 33, 44, 0.03) 55.21%, rgba(30, 33, 44, 0.33) 68.73%, rgba(30, 33, 44, 0.56) 76.17%, rgba(30, 33, 44, 0.768225) 83.75%, rgba(30, 33, 44, 0.92) 91.49%, #1E212C 100%);
+  transform: translateY(50%);
+  transition: all .3s;
+}
+
+.team_socials-item {
+  margin-right: 12px;
+}
+
+.team_socials-item:last-child {
+  margin-right: 0;
+}
+
+.team__socials-link {
+  display: block;
+  line-height: 0;
+}
+
+.team__socials-link path {
+  transition: all .3s;
+}
+
+.team__socials-link:hover path {
+  fill: #fff;
+}
+
+.team__info {
+  text-align: center;
+}
+.team__info-name {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 150%;
+  margin-bottom: 5px;
+}
+.team__info-position {
+  color: #787a80;
+}
+
+.team__slider-arrows {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px
+}
+
+.team__slider-arrows {
+  display: flex;
+}
+
+.team__slider-arrow {
+  display: block;
+  position: relative;
+  line-height: 0;
+  border-radius: 50%;
+  z-index: 0;
+}
+
+.team__slider-arrow path {
+  transition: all .3s;
+}
+
+.team__slider-arrow::before {
+  content: "";
+  position: absolute;
+  top: 13%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: 48px;
+  height: 48px;
+  background-color: #FF3F3A;
+  border-radius: 50%;
+  z-index: -1;
+  transition: all .3s;
+}
+
+.team__slider-arrow:hover path {
+  fill: #fff;
+}
+
+.team__slider-arrow:hover::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.team__slider-prev {
+  margin-right: 24px;
+}
+
+.team__slider-next {
+}
+
+/* ======================= TESTIMONIALS ====================*/
+/* ======================= TESTIMONIALS ====================*/
+
+
+.testimonials {
+  background: #f4f5f7;
+  position: relative;
+}
+
+.testimonials::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-44.9%, -55.4%);
+  background: url("../images/decor/testi-bg.svg")  0 0 / 100% no-repeat;
+  width: 1971px;
+  height: 816px;
+}
+
+.container {
+}
+
+.testimonials__inner {
+  position: relative;
+  z-index: 1;
+}
+
+.testimonials__heading {
+  margin-bottom: 60px;
+}
+
+.testimonials__slider-wrapper {
+  position: relative;
+  padding: 0 50px;
+  margin-bottom: 50px;
+}
+
+.testimonials__slider {
+  max-width: 1020px;
+  margin: 0 auto;
+}
+
+.testimonials__slide {
+  padding: 64px;
+  background-color: #fff;
+  border-radius: 4px;
+}
+.testimonials__slide-inner {
+  max-width: 810px;
+  margin: 0 auto;
+  padding-left: 58px;
+}
+.testimonials__quote {
+  font-size: 20px;
+  line-height: 150%;
+  margin-bottom: 24px;
+  position: relative;
+}
+
+.testimonials__quote::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -58px;
+  background: url("../images/icons/quote-icon.svg") 0 0 / 100%no-repeat;
+  width: 28px;
+  height: 20px;
+}
+.testimonials__user {
+  display: flex;
+  align-items: center;
+}
+.testimonials__avatar {
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 20px;
+}
+.testimonials__info {
+}
+.testimonials__info-name {
+  color: #1E212C;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+.testimonials__info-position {
+  font-size: 14px;
+  line-height: 150%;
+  color: #787A80;
+}
+
+.testimonials__arrow {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  z-index: 0;
+}
+
+.testimonials__arrow path {
+  transition: all .3s;
+}
+
+.testimonials__arrow::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  width: 48px;
+  height: 48px;
+  background-color: #ff3f3a;
+  border-radius: 50%;
+  z-index: -1;
+  transition: all .3s;
+}
+
+.testimonials__prev {
+  left: 0;
+}
+
+.testimonials__prev::before {
+  transform: translate(-50%, -50%) scale(0);
+  left: 22%;
+}
+
+.testimonials__next {
+  right: 0;
+  justify-content: flex-end;
+}
+
+.testimonials__next::before {
+  transform: translate(50%, -50%) scale(0);
+  right: 22%;
+}
+
+.testimonials__arrow:hover path {
+  fill: #fff;
+}
+
+.testimonials__prev:hover::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.testimonials__next:hover::before {
+  transform: translate(50%, -50%) scale(1);
+}
+
+.testimonials__dots .slick-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.testimonials__dots li {
+  margin-right: 12px;
+}
+
+.testimonials__dots li:last-child {
+  margin-right: 0;
+}
+
+.testimonials__dots button {
+  font-size: 0;
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.testimonials__dots button::before {
+  content: "";
+  height: 3px;
+  width: 100%;
+  background-color: #B3B7BC;
+  border-radius: 3px;
+}
+
+.testimonials__dots .slick-active button::before {
+  background-color: #424551;
+  transition: all .3s;
+}
+
+/* ======================= COMPANIES ====================*/
+/* ======================= COMPANIES ====================*/
+
+
+.companies {
+  background: #f4f5f7;
+}
+
+.companieas__inner {
+  position: relative;
+}
+
+.companies__inner::before {
+  content: "";
+  position: absolute;
+  left: -230px;
+  bottom: -120px;
+  background: url("../images/decor/5.svg") 100% no-repeat;
+  height: 90px;
+  width: 90px;
+}
+
+.companies__heading {
+  margin-bottom: 60px;
+}
+
+.companies__grid {
+  display: grid;
+  grid-template: repeat(2, auto) / repeat(6, 1fr);
+  gap: 40px 100px;
+
+}
+
+.companies__grid-item {
+
+}
+
+.companies__grid-link {
+  display: block;
+}
+
+.companies__grid-link img {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(1);
+  opacity: .4;
+  transition: all 1.3s;
+}
+
+.companies__grid-link:hover img {
+  filter: grayscale(0);
+  opacity: 1;
+  transition: all .3s;
 }
