--- a/Createx/css/style.css
+++ b/Createx/css/style.css
@@ -39,6 +39,10 @@ html, body {
   padding-bottom: 177px;
 }
 
+.main__program {
+  padding: 115px 0 185px;
+}
+
 .container {
   max-width: 1260px;
   margin: 0 auto;
@@ -490,15 +494,19 @@ html, body {
 .directions__list-item--marketing .directions__link-tag {
   background-color: #03cea4
 }
+
 .directions__list-item--management .directions__link-tag {
   background-color: #5a87fc
 }
+
 .directions__list-item--hr .directions__link-tag {
   background-color: #f89828
 }
+
 .directions__list-item--design .directions__link-tag {
   background-color: #f52f6e
 }
+
 .directions__list-item--development .directions__link-tag {
   background-color: #7772f1
 }
@@ -570,9 +578,7 @@ html, body {
 /* ====================================== CERTIFICATE ================================== */
 /* ====================================== CERTIFICATE ================================== */
 
-.cert {
-
-}
+.cert {}
 
 .cert__inner {
   display: flex;
@@ -628,8 +634,8 @@ html, body {
   background: url("../images/decor/team-bg.svg") calc(50% + 140px) calc(50% - 120px) no-repeat, #f4f5f7;
 }
 
-.team__inner {
-}
+.team__inner {}
+
 .team__heading {
   margin-bottom: 60px;
   position: relative;
@@ -653,6 +659,7 @@ html, body {
   overflow: hidden;
   position: relative;
 }
+
 .team__image {
   position: relative;
   height: 340px;
@@ -672,7 +679,7 @@ html, body {
   justify-content: flex-end;
   align-items: flex-end;
   position: absolute;
-  top: 50%; 
+  top: 50%;
   left: 0;
   right: 0;
   bottom: 0;
@@ -706,12 +713,14 @@ html, body {
 .team__info {
   text-align: center;
 }
+
 .team__info-name {
   font-weight: 700;
   font-size: 20px;
   line-height: 150%;
   margin-bottom: 5px;
 }
+
 .team__info-position {
   color: #787a80;
 }
@@ -765,8 +774,7 @@ html, body {
   margin-right: 24px;
 }
 
-.team__slider-next {
-}
+.team__slider-next {}
 
 /* ======================= TESTIMONIALS ====================*/
 /* ======================= TESTIMONIALS ====================*/
@@ -783,13 +791,12 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-44.9%, -55.4%);
-  background: url("../images/decor/testi-bg.svg")  0 0 / 100% no-repeat;
+  background: url("../images/decor/testi-bg.svg") 0 0 / 100% no-repeat;
   width: 1971px;
   height: 816px;
 }
 
-.container {
-}
+.container {}
 
 .testimonials__inner {
   position: relative;
@@ -816,11 +823,13 @@ html, body {
   background-color: #fff;
   border-radius: 4px;
 }
+
 .testimonials__slide-inner {
   max-width: 810px;
   margin: 0 auto;
   padding-left: 58px;
 }
+
 .testimonials__quote {
   font-size: 20px;
   line-height: 150%;
@@ -837,22 +846,26 @@ html, body {
   width: 28px;
   height: 20px;
 }
+
 .testimonials__user {
   display: flex;
   align-items: center;
 }
+
 .testimonials__avatar {
   border-radius: 50%;
   overflow: hidden;
   margin-right: 20px;
 }
-.testimonials__info {
-}
+
+.testimonials__info {}
+
 .testimonials__info-name {
   color: #1E212C;
   font-weight: 700;
   margin-bottom: 4px;
 }
+
 .testimonials__info-position {
   font-size: 14px;
   line-height: 150%;
@@ -983,12 +996,9 @@ html, body {
   display: grid;
   grid-template: repeat(2, auto) / repeat(6, 1fr);
   gap: 40px 100px;
-
 }
 
-.companies__grid-item {
-
-}
+.companies__grid-item {}
 
 .companies__grid-link {
   display: block;
@@ -1007,3 +1017,79 @@ html, body {
   opacity: 1;
   transition: all .3s;
 }
+
+/* ========================= ACCORDEON ========== */
+/* ========================= ACCORDEON ========== */
+
+
+.program {}
+
+.program__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.program__content {
+  max-width: 600px;
+  margin-right: 30px;
+}
+
+.program__heading {
+  margin-bottom: 60px;
+}
+
+.program__acc {}
+
+.program__acc-item {
+  margin-bottom: 24px;
+}
+
+.program__acc-link {
+  display: block;
+  padding-left: 40px;
+}
+
+.program__acc-item:last-child {
+  margin-bottom: 0;
+}
+
+
+.program__acc-head {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 150%;
+  color: #1E212C;
+  position: relative;
+}
+
+.program__acc-head span {
+  font-weight: 400;
+  color: #FF3F3A;
+}
+
+.program__acc-head::before,
+.program__acc-head::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -40px;
+  width: 18px;
+  height: 2px;
+  background-color: #ff3f3a;
+  border-radius: 2px;
+}
+
+.program__acc-head::after {
+  transform: rotate(90deg);
+  transition: all .3s;
+}
+
+.program__acc-text {
+  margin-top: 16px;
+}
+
+.program__acc-link--active .program__acc-head::after {
+  transform: rotate(0deg);
+}
+
+.program__image {}
