--- a/Createx/css/style.css
+++ b/Createx/css/style.css
@@ -43,6 +43,10 @@ html, body {
   padding: 115px 0 185px;
 }
 
+.main__blog {
+  padding-bottom: 200px;
+}
+
 .container {
   max-width: 1260px;
   margin: 0 auto;
@@ -91,7 +95,7 @@ html, body {
   color: #1e212c;
 }
 
-.haeding__subtitle {
+.heading__subtitle {
   line-height: 150%;
   margin-bottom: 8px;
   letter-spacing: 1px;
@@ -133,7 +137,7 @@ html, body {
   margin: 0 60px;
 }
 
-.haeder__nav {
+.header__nav {
   margin-right: auto;
 }
 
@@ -141,7 +145,7 @@ html, body {
   display: flex;
 }
 
-.haeder__nav-item {
+.header__nav-item {
   margin-right: 40px;
 
 }
@@ -1027,6 +1031,7 @@ html, body {
 .program__inner {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .program__content {
@@ -1093,3 +1098,182 @@ html, body {
 }
 
 .program__image {}
+
+/* =================================== BLOG ========================= */
+/* =================================== BLOG ========================= */
+
+
+.blog {}
+
+.blog__inner {}
+
+.blog__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 60px;
+}
+
+.blog__heading {
+  margin-right: 30px;
+}
+
+.blog__btn {}
+
+.blog__row {
+  display: flex;
+  margin: 0 -15px;
+}
+
+.blog__item {
+  padding: 0 15px;
+}
+
+.blog__item-link {
+  display: block;
+  transition: all 1.3s;
+}
+
+.blog__item-inner {}
+
+.blog__image-box {
+  border-radius: 4px;
+  overflow: hidden;
+  position: relative;
+}
+
+.blog__image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-bottom: 16px;
+}
+
+.blog__image-box span {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  background: #fff;
+  border-radius: 4px;
+  padding: 1px 8px;
+}
+
+.blog__image-box span::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+}
+
+.blog__item-content {}
+
+.blog__item-info {
+  display: flex;
+  margin: 0 -12px 8px;
+}
+
+.blog__info-el {
+  padding: 0 12px;
+  position: relative;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 150%;
+  color: #787A80;
+}
+
+.blog__info-el::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  width: 1px;
+  height: 12px;
+  background-color: #787A80;
+}
+
+.blog__info-el:last-child::after {
+  content: none;
+}
+
+.blog__info-date {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.blog__info-date::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 15px;
+  background: url("../images/icons/calendar-icon.svg") 0 0 / 100% no-repeat;
+  margin-right: 9px;
+}
+
+.blog__info-time {
+  display: flex;
+  align-items: center;
+}
+
+.blog__info-time::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 15px;
+  background: url("../images/icons/clock-icon.svg") 0 0 / 100% no-repeat;
+  margin-right: 9px;
+}
+
+.blog__item-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 150%;
+  color: #1E212C;
+  margin-bottom: 8px;
+}
+
+.blog__item-text {
+  margin-bottom: 16px;
+}
+
+.blog__item-button {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  color: #1E212C;
+  transition: all 1.3s;
+}
+
+.blog__item-button::after {
+  content: "";
+  width: 24px;
+  height: 24px;
+  background: url("../images/icons/arrow-right-red.svg") 0 0 / 100% no-repeat;
+  margin-left: 8px;
+}
+
+.blog__item-link:hover {
+  box-shadow: 0px 30px 30px 10px rgb(154 156 165 / 8%);
+  transition: all .3s;
+}
+
+.blog__item-link:hover .blog__item-button {
+  color: #FF3F3A;
+  transition: all .3s;
+}
+
+.blog__item--podcast .blog__image-box span::before {
+  background: url("../images/icons/podcast-icon.svg") 0 0 / 100% no-repeat;
+}
+
+.blog__item--video .blog__image-box span::before {
+  background: url("../images/icons/play-mini.svg") 0 0 / 100% no-repeat;
+}
+
+.blog__item--article .blog__image-box span::before {
+  background: url("../images/icons/article-icon.svg") 0 0 / 100% no-repeat;
+}
